crates/cli/tests/snapshots/snapshot_tests__codeclimate_unused_dev_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-dev-dependency",
    "description": "Package 'jest' is in devDependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "0a6f69176391810d",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 12
      }
    }
  }
]
