crates/cli/tests/snapshots/snapshot_tests__codeclimate_unused_optional_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-optional-dependency",
    "description": "Package 'fsevents' is in optionalDependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "5c890a87a0ad36a9",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  }
]
