crates/cli/tests/snapshots/snapshot_tests__codeclimate_unused_types_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-type",
    "description": "Type export 'OldType' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "70129604df6adaf0",
    "location": {
      "path": "src/types.ts",
      "lines": {
        "begin": 5
      }
    }
  }
]
