crates/cli/tests/snapshots/snapshot_tests__compact_output.snap
---
source: crates/cli/tests/snapshot_tests.rs
assertion_line: 147
expression: output
---
unused-file:src/dead.ts
unused-export:src/utils.ts:10:helperFn
unused-type:src/types.ts:5:OldType
unused-dep:lodash
unused-devdep:jest
unused-enum-member:src/enums.ts:8:Status.Deprecated
unused-class-member:src/service.ts:42:UserService.legacyMethod
unresolved-import:src/app.ts:3:./missing-module
unlisted-dep:chalk
duplicate-export:Config
